--- a/install
+++ b/install
@@ -8,7 +8,7 @@ if [ ! -d "$HOME/.hammerspoon/" ]; then
 	exit 1
 fi
 
-rm -Rf "$HOME/.hammerspoon/*"
+rm -Rf "$HOME/.hammerspoon/"*
 
 cp -R src/ "$HOME/.hammerspoon/"
 
