--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1,6 +1,6 @@
 {
     "en": {
-    	"suggestATranslation": "Suggest a Translation",
+    	"suggestATranslation": "Suggest A New Language",
     	"reportATranslationMistake": "Report a Translation Mistake",
     	"changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
         "loadFinalCutProFailed": "Failed to load Final Cut Pro. Please try again.",
