--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -372,7 +372,11 @@
         "midiEditor": "MIDI Editor",
         "cpMoveAndResizeHalfRight_title": "Move & Resize Focussed Window: Half Right",
         "somethingHasGoneWrong": "Opps! Something has gone wrong!",
-        "rebuildControlMapMessage": "Just a heads up, it can take a few minutes to re-build the Control Map once you click OK.",
+        "rebuildComplete": "Rebuild Complete",
+        "rebuildCompleteMessage": "CommandPost has successfully built the Tangent Control Map.",
+        "rebuildControlMapMessage": "Please be aware that when you rebuild the Control Map this will affect your custom layouts in Tangent Mapper as plugins and effects may have been added, removed, renamed or re-ordered.\n\nAny previous Control Maps will be backed up in the same folder, which you can manually restore if needed.",
+        "rebuildControlMapTakesTimes": "It can take a few minutes to build the Control Map once you click OK, and this dialog box may stay visible during this time.",
+        "existingControlMapDoesNotExist": "An existing control map does not exist.",
         "cpTrashPreferences_title": "Trash Preferences",
         "developerGuide": "Developer Guide",
         "commandLineToolDescription": "When the Command Line Tool is installed, you can use <strong>cmdpost</strong> in Terminal to trigger Lua code. Please refer to the User Guide for more information.",
@@ -427,7 +431,7 @@
         "cpFeatureRequest_title": "Suggest Final Cut Pro Feature to Apple",
         "webappSettings": "Settings",
         "clearHistory": "Clear History",
-        "tangentPreferencesInfo": "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad app</strong>, and any future panels.<br />\n                                                    <br />\n                                                    All actions within CommandPost can be assigned to any Tangent panel button/wheel using <strong>Tangent's Mapper</strong> application. This allows you to create your own layouts and modes.<br />\n                                                    <br />\n                                                    If you add a new effect or plugin in Final Cut Pro, or change Languages, you can use the <strong>Rebuild Control Map</strong> button below to make these new items appear in <strong>Tangent Mapper</strong>. Please be aware that when you rebuild the Control Map this may affect your custom layouts in Tangent Mapper as plugins/effects may have been added, removed or renamed.<br />\n                                                    <br />",
+        "tangentPreferencesInfo": "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad app</strong>, and any future panels.<br />\n                                                    <br />\n                                                    All actions within CommandPost can be assigned to any Tangent panel button/wheel using <strong>Tangent's Mapper</strong> application. This allows you to create your own layouts and modes.<br />\n                                                    <br />\n                                                    If you add a new effect or plugin in Final Cut Pro, or change Languages, you can use the <strong>Rebuild Control Map</strong> button below to make these new items appear in <strong>Tangent Mapper</strong>. Please be aware that when you rebuild the Control Map this will affect your custom layouts in Tangent Mapper as plugins and effects may have been added, removed, renamed or re-ordered.<br />\n                                                    <br />",
         "donateToDevelopers": "Paypal Donation to Developers",
         "english": "English",
         "openTangentMapper": "Open Tangent Mapper",
@@ -809,6 +813,7 @@
         "clearList": "Clear List",
         "setupTitle": "CommandPost Setup",
         "learn": "Learn",
+        "core_tangent_manager_label": "Manager: Tangent",
         "finalcutpro_tangent_manager_label": "Manager: Tangent",
         "noDevicesDetected": "No Devices Detected",
         "enableCustomisedTouchBar": "Enable Customised Touch Bar",
