--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -649,7 +649,8 @@
         "batchExportReplaceYes": "Exports with duplicate filenames will be replaced.",
         "changeDestinationFolder": "Change Destination Folder",
         "hacksShortcutsRestart": "CommandPost Shortcuts in Final Cut Pro requires your Administrator password and also needs Final Cut Pro to restart before it can take affect.",
-        "allowZoomingWithOptionKey": "Enable Timeline Zooming with Mouse Scroll & OPTION key",
+        "allowZoomingWithModifierKey": "Enable Timeline Zooming with Mouse Scroll & Modifier Key",
+        "modifierKey": "Modifier Key",
         "cpSelectClipAtLane_customTitle": "Select Clip at Lane %{count}",
         "cpShowGrid_title": "Show Window Grid",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
