--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -3,6 +3,7 @@
     	"suggestATranslation": "Suggest A New Language",
     	"reportATranslationMistake": "Report a Translation Mistake",
     	"changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
+    	"clearingFinalCutProCacheRestart": "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart.",
         "loadFinalCutProFailed": "Failed to load Final Cut Pro. Please try again.",
         "cpGenerator8_title": "Apply Generator 8",
         "reload": "Reload",
@@ -11,6 +12,7 @@
         "changeSmartCollectionLabel": "Change Smart Collections Label",
         "touchbarPanelTooltip": "Touch Bar Preferences",
         "finalcutpro_clipboard_manager_label": "Manager: Clipboard",
+        "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
         "angle": "Angle",
         "finalcutpro_open_label": "Open Final Cut Pro",
         "touchBarWidget": "Touch Bar Widget",
@@ -655,6 +657,8 @@
         "cpShowGrid_title": "Show Window Grid",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "cpPlay_title": "Play",
+        "pluginCache": "Plugin Cache",
+        "clearPluginCache": "Clear Plugin Cache",
         "hudXMLNameError": "The label you entered has special characters that cannot be used.\n\nPlease try again.",
         "featureRequest": "Feature Request",
         "cpShowProjectTimecodeTop_title": "Show Project Timecode Top",
