#1077 * Added 'global' mode as the default mode when not in a specific application.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -267,6 +267,7 @@
         "showTransitions"                                  : "Show Transitions",
         "yes"                                              : "Yes",
         "global_widgets_action"                            : "Global Touch Bar Widgets",
+        "global"                                           : "Global",
         "noPluginShortcut"                                 : "There is no ${plugin} assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
         "leaveFilesInPlaceOnImport"                        : "Leave Files In Place On Import",
         "finalcutpro_touchbar_widgets_colorboard_label"    : "Widget: Color Board",
