#1077 * Tidied up i18n/prefs * Disabled automatic Tangent Mapping backup. Can be triggered manually via `core.tangent.manager:backupControlsXML()`

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1,82 +1,82 @@
 {
     "en": {
-    	"midiTools": "MIDI Tools",
-    	"midiMachineControl": "MIDI Machine Control (MMC)",
-    	"transmitMMC": "Transmit MMC",
-    	"listenMMC": "Listen to MMC Input",
-    	"midiTimecode": "MIDI Time Code (MTC)",
-    	"transmitMTC": "Transmit MTC",
-    	"listenMTC": "Listen to MTC Input",
-    	"suggestATranslation": "Suggest A New Language",
-    	"reportATranslationMistake": "Report a Translation Mistake",
-    	"changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
-    	"clearingFinalCutProCacheRestart": "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart.",
-        "loadFinalCutProFailed": "Failed to load Final Cut Pro. Please try again.",
-        "cpGenerator8_title": "Apply Generator 8",
-        "reload": "Reload",
-        "enterVideoTag": "Enter a Video Tag Here",
-        "scanFinalCutProDone": "Final Cut Pro was scanned successfully.",
-        "changeSmartCollectionLabel": "Change Smart Collections Label",
-        "touchbarPanelTooltip": "Touch Bar Preferences",
-        "finalcutpro_clipboard_manager_label": "Manager: Clipboard",
-        "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
-        "angle": "Angle",
+    	"midiTools"                                 : "MIDI Tools",
+    	"midiMachineControl"                        : "MIDI Machine Control (MMC)",
+    	"transmitMMC"                               : "Transmit MMC",
+    	"listenMMC"                                 : "Listen to MMC Input",
+    	"midiTimecode"                              : "MIDI Time Code (MTC)",
+    	"transmitMTC"                               : "Transmit MTC",
+    	"listenMTC"                                 : "Listen to MTC Input",
+    	"suggestATranslation"                       : "Suggest A New Language",
+    	"reportATranslationMistake"                 : "Report a Translation Mistake",
+    	"changeLanguageRestart"                     : "Changing languages requires CommandPost to Restart.",
+    	"clearingFinalCutProCacheRestart"           : "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart.",
+    	"loadFinalCutProFailed"                     : "Failed to load Final Cut Pro. Please try again.",
+    	"cpGenerator8_title"                        : "Apply Generator 8",
+    	"reload"                                    : "Reload",
+    	"enterVideoTag"                             : "Enter a Video Tag Here",
+    	"scanFinalCutProDone"                       : "Final Cut Pro was scanned successfully.",
+    	"changeSmartCollectionLabel"                : "Change Smart Collections Label",
+    	"touchbarPanelTooltip"                      : "Touch Bar Preferences",
+    	"finalcutpro_clipboard_manager_label"       : "Manager: Clipboard",
+    	"finalcutpro_preferences_clearcache_label"  : "Preferences: Clear Cache",
+    	"angle"                                     : "Angle",
     	"angle3"                                    : "ANG",
-        "finalcutpro_open_label": "Open Final Cut Pro",
-        "touchBarWidget": "Touch Bar Widget",
-        "enableTimelinePlayheadLock": "Enable Timeline Playhead Lock",
-        "feedback": "Feedback",
-        "cpTransition5_title": "Apply Transition 5",
-        "core_preferences_panels_general_label": "Preferences Panel: General",
-        "uninstall": "Uninstall",
-        "finder_window_label": "Window Management",
-        "reportBugToApple": "Report Final Cut Pro Bug to Apple",
-        "emailAddress": "Email Address",
-        "finalcutpro_commands_actions_label": "Commands Actions",
-        "cpGlobalConsole_title": "Activate Global Console",
-        "core_preferences_panels_touchbar_label": "Preferences: Touch Bar",
-        "none": "None",
-        "shareDetails_Vimeo": "Type: Vimeo\nLogin: %{login}\nTitle: %{title}",
-        "finalcutpro_timeline_colorboard_label": "Timeline: Color Board",
-        "core_streamdeck_manager_label": "Manger: Stream Deck",
-        "enterFinderTag": "Please enter the Finder Tag you want to use:",
-        "enableClipboardHistory": "Enable Clipboard History",
-        "enableVisualAlerts": "Enable Visual Alerts",
-        "cpStepResizeLeft_title": "Step Resize Focussed Window: Left",
-        "finalcutpro_hacks_timecodeoverlay_label": "Timecode Overlay",
-        "shortcutPleaseTryAgain": "Please select a new key and/or modifier combination and try again.",
-        "notificationTestFailedMessage": "The test failed with the following errors:",
-        "controlChange": "Control Change",
-        "number": "Number",
-        "renderComplete": "Render Complete!",
-        "cpCopyWithCustomLabelAndFolder_title": "Copy with Custom Label and Folder",
-        "finalcutpro_notifications_prowl_label": "Notifications: Prowl",
-        "cpStabilizationToggle_title": "Toggle Stabilization",
-        "finalcutpro_timeline_pluginshortcuts_label": "Timeline: Plugin Shortcuts",
-        "cpVideoEffect2_title": "Apply Video Effect 2",
-        "betterPerformance": "Better Performance",
-        "alreadyWatched": "This folder is already being watched.",
-        "finalcutpro_clipboard_history_label": "Clipboard History",
-        "cpUserGuide_title": "User Guide",
-        "commandType": "Type",
-        "shareFailed": "Share Failed",
-        "cpLeaveInPlaceOn_title": "Enable Leave In Place on Import",
-        "midiResetAll": "Reset All Applications",
-        "pluginsUnableToEnable": "Unable to enable the '%{pluginName}' plugin.",
-        "fcpx_command_group": "Final Cut Pro",
-        "cpSaveKeywordPreset_customTitle": "Save Keyword Preset %{count}",
-        "notificationsPanelLabel": "Notifications",
-        "color": "Color",
-        "menuChoiceSubText": "Menu: %{path}",
-        "deleteNote": "Make sure <strong>Copy to library storage location</strong> is selected in Final Cut Pro's Preferences.",
-        "cpVideoEffect9_title": "Apply Video Effect 9",
-        "plugin_action_errorLog": "Error Log",
-        "shortcutAlreadyInUse": "This shortcut is already in use.",
-        "polyphonicKeyPressure": "Polyphonic Key Pressure",
-        "feedbackError": "An error occurred trying to communicate with the CommandPost servers.\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
-        "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
-        "enableBackgroundRender": {
-            "one": "Enable Background Render (%{count} sec)",
+    	"finalcutpro_open_label"                    : "Open Final Cut Pro",
+    	"touchBarWidget"                            : "Touch Bar Widget",
+    	"enableTimelinePlayheadLock"                : "Enable Timeline Playhead Lock",
+    	"feedback"                                  : "Feedback",
+    	"cpTransition5_title"                       : "Apply Transition 5",
+    	"core_preferences_panels_general_label"     : "Preferences Panel: General",
+    	"uninstall"                                 : "Uninstall",
+    	"finder_window_label"                       : "Window Management",
+    	"reportBugToApple"                          : "Report Final Cut Pro Bug to Apple",
+    	"emailAddress"                              : "Email Address",
+    	"finalcutpro_commands_actions_label"        : "Commands Actions",
+    	"cpGlobalConsole_title"                     : "Activate Global Console",
+    	"core_preferences_panels_touchbar_label"    : "Preferences: Touch Bar",
+    	"none"                                      : "None",
+    	"shareDetails_Vimeo"                        : "Type: Vimeo\nLogin: %{login}\nTitle: %{title}",
+    	"finalcutpro_timeline_colorboard_label"     : "Timeline: Color Board",
+    	"core_streamdeck_manager_label"             : "Manager: Stream Deck",
+    	"enterFinderTag"                            : "Please enter the Finder Tag you want to use:",
+    	"enableClipboardHistory"                    : "Enable Clipboard History",
+    	"enableVisualAlerts"                        : "Enable Visual Alerts",
+    	"cpStepResizeLeft_title"                    : "Step Resize Focussed Window: Left",
+    	"finalcutpro_hacks_timecodeoverlay_label"   : "Timecode Overlay",
+    	"shortcutPleaseTryAgain"                    : "Please select a new key and/or modifier combination and try again.",
+    	"notificationTestFailedMessage"             : "The test failed with the following errors:",
+    	"controlChange"                             : "Control Change",
+    	"number"                                    : "Number",
+    	"renderComplete"                            : "Render Complete!",
+    	"cpCopyWithCustomLabelAndFolder_title"      : "Copy with Custom Label and Folder",
+    	"finalcutpro_notifications_prowl_label"     : "Notifications: Prowl",
+    	"cpStabilizationToggle_title"               : "Toggle Stabilization",
+    	"finalcutpro_timeline_pluginshortcuts_label": "Timeline: Plugin Shortcuts",
+    	"cpVideoEffect2_title"                      : "Apply Video Effect 2",
+    	"betterPerformance"                         : "Better Performance",
+    	"alreadyWatched"                            : "This folder is already being watched.",
+    	"finalcutpro_clipboard_history_label"       : "Clipboard History",
+    	"cpUserGuide_title"                         : "User Guide",
+    	"commandType"                               : "Type",
+    	"shareFailed"                               : "Share Failed",
+    	"cpLeaveInPlaceOn_title"                    : "Enable Leave In Place on Import",
+    	"midiResetAll"                              : "Reset All Applications",
+    	"pluginsUnableToEnable"                     : "Unable to enable the '%{pluginName}' plugin.",
+    	"fcpx_command_group"                        : "Final Cut Pro",
+    	"cpSaveKeywordPreset_customTitle"           : "Save Keyword Preset %{count}",
+    	"notificationsPanelLabel"                   : "Notifications",
+    	"color"                                     : "Color",
+    	"menuChoiceSubText"                         : "Menu: %{path}",
+    	"deleteNote"                                : "Make sure <strong>Copy to library storage location</strong> is selected in Final Cut Pro's Preferences.",
+    	"cpVideoEffect9_title"                      : "Apply Video Effect 9",
+    	"plugin_action_errorLog"                    : "Error Log",
+    	"shortcutAlreadyInUse"                      : "This shortcut is already in use.",
+    	"polyphonicKeyPressure"                     : "Polyphonic Key Pressure",
+    	"feedbackError"                             : "An error occurred trying to communicate with the CommandPost servers.\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
+    	"finalcutpro_browser_keywords_label"        : "Browser: Keyword Features",
+    	"enableBackgroundRender"                    : {
+            "one"  : "Enable Background Render (%{count} sec)",
             "other": "Enable Background Render (%{count} secs)"
         },
         "cpZoomToSelection_title"              : "Zoom to Selection",
@@ -247,7 +247,7 @@
         "bugReport"                                        : "Bug Report",
         "cpLaunchFinalCutPro_title"                        : "Launch Final Cut Pro",
         "one"                                              : "1",
-        "core_watchfolders_manager_label"                  : "Manger: Watch Folders",
+        "core_watchfolders_manager_label"                  : "Manager: Watch Folders",
         "enableStreamDeck"                                 : "Enable Stream Deck",
         "finalCutProLanguage"                              : "Final Cut Pro Language",
         "finalcutpro_timeline_playback_label"              : "Timeline: Playback",
@@ -450,7 +450,7 @@
         "cpFeatureRequest_title"                           : "Suggest Final Cut Pro Feature to Apple",
         "webappSettings"                                   : "Settings",
         "clearHistory"                                     : "Clear History",
-        "tangentPreferencesInfo"                           : "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad app</strong>, and any future panels.<br />\n                                                    <br />\n                                                    All actions within CommandPost can be assigned to any Tangent panel button/wheel using <strong>Tangent's Mapper</strong> application. This allows you to create your own layouts and modes.<br />\n                                                    <br />\n                                                    If you add a new effect or plugin in Final Cut Pro, or change Languages, you can use the <strong>Rebuild Control Map</strong> button below to make these new items appear in <strong>Tangent Mapper</strong>. Please be aware that when you rebuild the Control Map this will affect your custom layouts in Tangent Mapper as plugins and effects may have been added, removed, renamed or re-ordered.<br />\n                                                    <br />",
+        "tangentPreferencesInfo"                           : "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad app</strong>, and any future panels.<br />\n<br />\nAll actions within CommandPost can be assigned to any Tangent panel button/wheel using <strong>Tangent's Mapper</strong> application. This allows you to create your own layouts and modes.<br />\n<br />",
         "donateToDevelopers"                               : "Paypal Donation to Developers",
         "english"                                          : "English",
         "openTangentMapper"                                : "Open Tangent Mapper",
@@ -984,6 +984,15 @@
         "mute9"                                                : "MUTE",
         "mute10"                                               : "MUTE",
         "on"                                                   : "ON",
-        "off"                                                  : "OFF"
+        "off"                                                  : "OFF",
+        "core_tangent_actions_label"                           : "Tangent: ComandPost Actions Support",
+        "core_tangent_global_label"                            : "Tangent: Global Mode",
+        "core_tangent_os_label"                                : "Tangent: macOS Controls",
+        "core_tangent_os_display_label"                        : "Tangent: macOS Display Controls",
+        "core_tangent_os_sound_label"                          : "Tangent: macOS Sound Controls",
+        "core_tangent_prefs_label"                             : "Tangent: Preferences",
+        "finalcutpro_tangent_color_label"                      : "Tangent: FCPX Color Inspector Controls",
+        "finalcutpro_tangent_group_label"                      : "Tangent: FCPX Support",
+        "finalcutpro_tangent_timeline_label"                   : "Tangent: FCPX Timeline Controls"
     }
 }
