--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1,5 +1,9 @@
 {
     "en": {
+    	"applyColorCorrectionFromTwoClipsBack"		: "Apply Color Correction from Two Clips Back",
+    	"applyColorCorrectionFromThreeClipsBack"	: "Apply Color Correction from Three Clips Back",
+    	"applyColorCorrectionFromPreviousClip"      : "Apply Color Correction from Previous Clip",
+    	"tangentFinalCutProShortcutFailed"			: "There is no shortcut key applied to this command, so the command cannot be triggered.\n\nPlease open up the Final Cut Pro Command Editor and assign a shortcut key to the command, then try again.",
     	"functions"									: "Functions",
     	"pasteboard"								: "Pasteboard",
     	"core_tangent_os_window_label"				: "Tangent: Windows Management",
@@ -427,6 +431,7 @@
         "thisIsATest"                                      : "This is a test",
         "cpTitle8_title"                                   : "Apply Title 8",
         "fcpx_colorInspector_action"                       : "Color Inspector",
+        "colorShortcuts"								   : "Color Shortcuts",
         "sharedXMLFiles"                                   : "Shared XML Files",
         "languageHeading"                                  : "Language",
         "options"                                          : "Options",
