#1050 * Added FCP > Video > Transform controls to Tangent * NOTE: `onChange(...)` is currently not working for the new parameters.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1008,6 +1008,7 @@
         "core_tangent_prefs_label"                             : "Tangent: Preferences",
         "finalcutpro_tangent_color_label"                      : "Tangent: FCPX Color Inspector Controls",
         "finalcutpro_tangent_group_label"                      : "Tangent: FCPX Support",
-        "finalcutpro_tangent_timeline_label"                   : "Tangent: FCPX Timeline Controls"
+        "finalcutpro_tangent_timeline_label"                   : "Tangent: FCPX Timeline Controls",
+        "video"                                                : "Video"
     }
 }
