--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1,5 +1,6 @@
 {
     "en": {
+    	"inspector"									: "Inspector",
     	"functions"									: "Functions",
     	"pasteboard"								: "Pasteboard",
     	"core_tangent_os_window_label"				: "Tangent: Windows Management",
