Tweaked Tangent Preferences Wording

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -482,7 +482,7 @@
         "cpFeatureRequest_title"                           : "Suggest Final Cut Pro Feature to Apple",
         "webappSettings"                                   : "Settings",
         "clearHistory"                                     : "Clear History",
-        "tangentPreferencesInfo"                           : "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong>, <strong>Wave2</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad app</strong>, and any future panels.",
+        "tangentPreferencesInfo"                           : "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Arc</strong>, <strong>Element</strong>, <strong>Wave</strong> & <strong>Wave2</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad</strong> & <strong>Android</strong> app, as well as any future panels that Tangent releases.",
         "donateToDevelopers"                               : "Paypal Donation to Developers",
         "english"                                          : "English",
         "openTangentMapper"                                : "Open Tangent Mapper",
