Tweaks to MIDI Code
- MIDI Bank now changes when you change the group in the MIDI
Preferences

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -328,6 +328,7 @@
         "clearClipboardHistory"                            : "Clear Clipboard History",
         "finalcutpro_timeline_preferences_label"           : "Timeline: Preferences",
         "shortcut_group_fcpx"                              : "Final Cut Pro",
+        "switchingTo"									   : "Switching to",
         "pleaseTryAgain"                                   : "Please try again.",
         "iMessageMissingDestination"                       : "Phone Number or Apple ID Required",
         "introText"                                        : "Thank you for installing CommandPost. This guide will help you set things up.",
